src/App.css
a {
  color: aliceblue;
  text-decoration: none;
  justify-content: center;
}

body {
  background-color: rgb(69, 78, 78);
  max-height: 70vh;
}


.App {
  text-align: center;
}

.company-container {
  margin: 0 auto;
}

.companyDataDisplay1, .companyDataDisplay2 {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.detailCompanyDisplay {
  border: solid black;
  color: aliceblue;
  width: 25rem;
  height: 28rem;
  font-size: 3vh;
}

.testCompanyDisplay {
  border: solid black;
  width: 15rem;
  height: 12rem;
  font-size: 3vh;
}

.footer, .header {
  background-color:rgb(57, 68, 92);
  color: aliceblue;
  margin: 3fr;
  padding:5px;
  height: 15rem;
  /* width: 100%; */
}

.footer-container {
  margin: 0 auto;
}

.header {
  display: flex;
  flex-direction: column;
  /* font-size: 5vh; */
}


.home {
  background-color:slategrey;
  color:aliceblue;
  height: 40rem;
  margin: 1rem;
  width: 98%;
}

.nav-container {
  background-color: linen;
  color: slategray;
  display: inline;
}

.professional-links {
  display: flex;
  flex-direction: row;
  width: 40vh;
  padding: 3vh;
  position: relative;
  left: 39%;
}

.search {
  background-color: aliceblue;
  color: crimson;
}

.stockContainer {
  padding: 2vh;
}

